fixed overflow on mm box (fixes ugly refresh)

--- a/tsn/style/gryphon/screen/master.css
+++ b/tsn/style/gryphon/screen/master.css
@@ -1841,6 +1841,7 @@ div.pagination span a:hover {
 
 .multimedia-box, #pow-box {
 	height: 200px;
+	overflow: hidden;
 	
 }
 	.multimedia-pagers {
